fix overflow

--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -20,6 +20,7 @@ body {
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover; /* Resize the background image to cover the entire container */
   background-attachment: fixed;
+  overflow-x: hidden;
 }
 
 main {
